# QDeskMate

./: CMakeLists.txt  README.md
src/: SettingsDialog.qml  deskmate.cpp  deskmate.h  main.cpp  main.qml  qml.qrc
src/res/: QDeskMate.rc
